fix hr spacing

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ hr{
     margin: 0;
 }
 p,input,button,select,fieldset,hr{
+    margin-top:0;
     margin-bottom: 10px;
 }
 ul{
